--- a/src/_patterns/01-core/01-settings/settings-font-family/_settings.font-family.scss
+++ b/src/_patterns/01-core/01-settings/settings-font-family/_settings.font-family.scss
@@ -46,8 +46,8 @@ $bolt-font-families: (
       loaded-class:  $bolt-fonts--loaded-class
     ),
     bodySubset: (
-      system: $bolt-font-family--sans-fallback,
-      custom: $bolt-font-family--sans-subset,
+      fallback-font: $bolt-font-family--sans-fallback,
+      custom-font: $bolt-font-family--sans-subset,
       loaded-class: $bolt-fonts--subset-loaded-class
     ),
     heading: (
