--- a/src/_patterns/01-core/04-elements/elements-page/_elements.page.scss
+++ b/src/_patterns/01-core/04-elements/elements-page/_elements.page.scss
@@ -29,6 +29,7 @@ html {
 }
 
 body {
+  @include bolt-font-family(bodySubset);
   @include bolt-font-family(body);
   @include bolt-font-size(medium);
   width: 100%;
