--- a/src/_patterns/01-core/07-utilities/utilities-all/_utilities.all.scss
+++ b/src/_patterns/01-core/07-utilities/utilities-all/_utilities.all.scss
@@ -6,5 +6,6 @@
 @import '@bolt/utilities-colors';
 @import '@bolt/utilities-flex';
 @import '@bolt/utilities-spacing';
+@import '@bolt/utilities-text-align';
 @import '@bolt/utilities-visuallyhidden';
 @import '@bolt/utilities-widths';
