--- a/src/_patterns/02-components/bolt-background/demo/background.demo.twig
+++ b/src/_patterns/02-components/bolt-background/demo/background.demo.twig
@@ -6,99 +6,57 @@
   contentTag: "figcaption"
 } %}
   {% block band_background %}
-    {% include "@bolt/background.twig" only %}
+    {% include "@bolt/background.twig" %}
   {% endblock band_background %}
 
   {% block band_content %}
-    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--large o-bolt-grid--matrix" %}
-      {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
+    {% grid with {
+        attributes: {
+          class: [
+            "o-bolt-grid--flex",
+            "o-bolt-grid--middle",
+            "o-bolt-grid--large",
+            "o-bolt-grid--matrix"
+          ]
+        }
+      } %}
+      {# teaserPosition == "center" ? "o-bolt-grid--center" : "" #}
+
+      {% if teaserPosition == "right" %}
+        {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}{% endcell %}
+      {% endif %}
+
+
+      {% cell with {
+        attributes: {
+          class: [
+            "u-bolt-width-1/1",
+            "u-bolt-width-2/3@small"
+          ]
+        }
+      } %}
+      {# teaserAlign == "center" ? "u-bolt-text-align-center" : "" #}
         {% include "@bolt/headline.twig" with {
           text: "Visualization & Simulation",
           size: "xxxlarge",
           tag: "h1"
         } only %}
-        {% include "@bolt/subheadline.twig" with {
-          text: "Imagine the Future with Decision Hub",
-          size: "xxlarge",
-          tag: "h2"
-        } only %}
-        {% include "@bolt/text.twig" with {
-          text: "Continuously improve results by visualizing how future adjustments to your strategies can impact business performance. Simulate and test your ideas, evaluate the results using intuitive views, and then deploy optimal alterations."
-        } only %}
-        {% include "@bolt/button.twig" with {
-          text: "View the data sheet"
-        } only %}
-      {% endcell %}
-    {% endgrid %}
-  {% endblock band_content %}
-{% endembed %}
-<div style="height: 2em"></div>
-{% embed "@bolt/band.twig" with {
-  size: size | default("large"),
-  theme: theme | default("dark"),
-  fullBleed: true,
-  tag: "figure",
-  contentTag: "figcaption"
-} %}
-  {% block band_background %}
-    {% include "@bolt/background--overlay-solid.twig" only %}
-  {% endblock band_background %}
 
-  {% block band_content %}
-    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--large o-bolt-grid--matrix" %}
-      {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
-        {% include "@bolt/headline.twig" with {
-          text: "Visualization & Simulation",
-          size: "xxxlarge",
-          tag: "h1"
-        } only %}
         {% include "@bolt/subheadline.twig" with {
           text: "Imagine the Future with Decision Hub",
           size: "xxlarge",
           tag: "h2"
         } only %}
+        
         {% include "@bolt/text.twig" with {
           text: "Continuously improve results by visualizing how future adjustments to your strategies can impact business performance. Simulate and test your ideas, evaluate the results using intuitive views, and then deploy optimal alterations."
         } only %}
+        
         {% include "@bolt/button.twig" with {
           text: "View the data sheet"
         } only %}
       {% endcell %}
     {% endgrid %}
-  {% endblock band_content %}
-{% endembed %}
-<div style="height: 2em"></div>
-{% embed "@bolt/band.twig" with {
-  size: size | default("large"),
-  theme: theme | default("dark"),
-  fullBleed: true,
-  tag: "figure",
-  contentTag: "figcaption"
-} %}
-  {% block band_background %}
-    {% include "@bolt/background--overlay-gradient.twig" only %}
-  {% endblock band_background %}
 
-  {% block band_content %}
-    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--large o-bolt-grid--matrix" %}
-      {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
-        {% include "@bolt/headline.twig" with {
-          text: "Visualization & Simulation",
-          size: "xxxlarge",
-          tag: "h1"
-        } only %}
-        {% include "@bolt/subheadline.twig" with {
-          text: "Imagine the Future with Decision Hub",
-          size: "xxlarge",
-          tag: "h2"
-        } only %}
-        {% include "@bolt/text.twig" with {
-          text: "Continuously improve results by visualizing how future adjustments to your strategies can impact business performance. Simulate and test your ideas, evaluate the results using intuitive views, and then deploy optimal alterations."
-        } only %}
-        {% include "@bolt/button.twig" with {
-          text: "View the data sheet"
-        } only %}
-      {% endcell %}
-    {% endgrid %}
   {% endblock band_content %}
 {% endembed %}
