--- a/src/styles/bolt-critical-fonts.scss
+++ b/src/styles/bolt-critical-fonts.scss
@@ -47,3 +47,12 @@
 // @import '@bolt/elements-paragraphs';
 // @import '@bolt/elements-small';
 // @import '@bolt/elements-tables';
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+@import '@bolt/generic-all';
+@import '@bolt/elements-all';
+@import '@bolt/elements-page';
+// @import 'objects.all';
+// @import 'components.all';
+// @import '@bolt/themes-all';
+// @import '@bolt/utilities-all';
