fix: testing fix to server build

--- a/src/styles/bolt-critical-fonts.scss
+++ b/src/styles/bolt-critical-fonts.scss
@@ -50,7 +50,7 @@
 @import '@bolt/settings-all';
 @import '@bolt/tools-all';
 @import '@bolt/generic-all';
-@import '@bolt/elements-all';
+@import '@bolt/elements-headings';
 @import '@bolt/elements-page';
 // @import 'objects.all';
 // @import 'components.all';
