fix: fixing twig escaping config. setting default PL page to the Bolt homepage.

--- a/src/_patterns/04-pages/bolt-homepage.twig
+++ b/src/_patterns/04-pages/bolt-homepage.twig
@@ -25,9 +25,11 @@
           size: "xxlarge"
         } only %}
 
-        {# include "@bolt/button.twig" with {
-          text: "Call to Action"
-        } #}
+        {% include "@bolt/button.twig" with {
+          text: "Explore the System",
+          url: "/styleguide/html/styleguide.html",
+          style: "primary"
+        } %}
 
       {% endcell %}
 
