--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -37,6 +37,6 @@
    Overrides -- @TODO: Move to
    external PL-specific Sass file
 \* ------------------------------------ */
-// .sg-main {
-//   @include bolt-padding(medium);
-// }
+.sg-main {
+  @include bolt-padding(medium);
+}
