--- a/src/_patterns/01-core/02-tools/tools-spacing/src/scss/libs/_tools.collapse-directionals.scss
+++ b/src/_patterns/01-core/02-tools/tools-spacing/src/scss/libs/_tools.collapse-directionals.scss
@@ -20,7 +20,7 @@
 ///     margin-right: 0;
 ///   }
 ///
-/// @require {function} contains-falsy
+/// @require {function} _bolt-contains-falsy
 ///
 /// @return {List}
 
