--- a/src/_patterns/01-core/02-tools/tools-list-remove/_tools.list-remove.scss
+++ b/src/_patterns/01-core/02-tools/tools-list-remove/_tools.list-remove.scss
@@ -7,8 +7,7 @@
 /// Remove an item from a list
 /// @param $list - A SASS list
 /// @param $index - The list index to remove
-/// @returns A SASS list
-/// @author Jake Wilson <jake.e.wilson@gmail.com>
+/// @return {List} A SASS list
 @function bolt-list-remove($list, $index) {
   $newList: ();
   @for $i from 1 through length($list) {
