--- a/src/_patterns/01-core/02-tools/tools-map-sort/_tools.map-sort.scss
+++ b/src/_patterns/01-core/02-tools/tools-map-sort/_tools.map-sort.scss
@@ -8,9 +8,8 @@
 /// bolt-map-sort
 /// Sort map by keys
 /// @param $map - A SASS map
-/// @returns A SASS map sorted by keys
-/// @requires function list-sort
-/// @author Jake Wilson <jake.e.wilson@gmail.com>
+/// @return {Map} A SASS map sorted by keys
+/// @requires {function} bolt-list-sort
 @function bolt-map-sort($map) {
   $keys: bolt-list-sort(map-keys($map));
   $sortedMap: ();
