--- a/src/_patterns/01-core/02-tools/tools-spacing/src/scss/libs/_tools.directional-property.scss
+++ b/src/_patterns/01-core/02-tools/tools-spacing/src/scss/libs/_tools.directional-property.scss
@@ -10,7 +10,7 @@
 ///   List of values
 ///
 /// @require {function} _bolt-collapse-directional-values
-/// @require {function} contains-falsy
+/// @require {function} _bolt-contains-falsy
 
 @mixin _bolt-directional-property($prefix, $suffix, $values, $important) {
   @if $important == important {
