--- a/src/_patterns/02-components/bolt-page-footer/src/_page-footer.twig
+++ b/src/_patterns/02-components/bolt-page-footer/src/_page-footer.twig
@@ -1,7 +1,7 @@
 <footer role="contentinfo">
     <small>
       <p>
-        <strong>Copyright &copy; 2017 Pegasystems, Inc.</strong> | <a href="/pattern-lab">Pattern Lab</a> | <a href="/docs">Sass Docs</a>
+        <strong>Copyright &copy; 2017 Pegasystems, Inc.</strong> | <a href="/styleguide/html/styleguide.html">Pattern Lab</a> | <a href="/sassdoc">Sass Docs</a>
       </p>
     </small>
 </footer>
