WIP: card styles

--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -1,6 +1,6 @@
-{% set tags = ["button", "a"] %} {# Available Headline Types #}
+{% set tags = ["button", "a", "div", "span"] %} {# Available Headline Types #}
 {% set widths = ["full", "full@small"] %}
-{% set styles = ["primary", "secondary", "text"] %}
+{% set styles = ["primary", "secondary", "tertiary"] %}
 {% set prefix = "c-bolt-" %}
 
 
