--- a/src/_patterns/02-components/02-bolt-button-group/src/button-group.twig
+++ b/src/_patterns/02-components/02-bolt-button-group/src/button-group.twig
@@ -12,9 +12,7 @@
   baseClass
 ] %}
 
-  <bolt-button-group
-    bolt-component
-  >
+  <bolt-button-group bolt-component>
     <{{ tag }} {{ attributes.addClass(classes) }}>
       {% for button in buttons %}
         <li class="{{ "#{baseClass}__item" }}">
